build/log/idf_py_stderr_output_180315
Command: make -j 6 all
In file included from /home/bmetal/esp-idf/components/esp_driver_uart/include/driver/uart.h:9,
                 from /home/bmetal/esp-idf/uartTest/main/uartTest.c:2:
/home/bmetal/esp-idf/components/esp_common/include/esp_err.h:115:28: error: expected identifier or '(' before 'do'
  115 | #define ESP_ERROR_CHECK(x) do {                                         \
      |                            ^~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:9:1: note: in expansion of macro 'ESP_ERROR_CHECK'
    9 | ESP_ERROR_CHECK(uart_driver_install(UART_NUM_2, uart_buffer_size, uart_buffer_size, 10, &uart_queue, 0));
      | ^~~~~~~~~~~~~~~
/home/bmetal/esp-idf/components/esp_common/include/esp_err.h:121:7: error: expected identifier or '(' before 'while'
  121 |     } while(0)
      |       ^~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:9:1: note: in expansion of macro 'ESP_ERROR_CHECK'
    9 | ESP_ERROR_CHECK(uart_driver_install(UART_NUM_2, uart_buffer_size, uart_buffer_size, 10, &uart_queue, 0));
      | ^~~~~~~~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'uart_rcv':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:61:25: warning: unused variable 'rx_junk_read' [-Wunused-variable]
   61 |                 uint8_t rx_junk_read = uart_read_bytes(uart_num, rx_junk, index, 500);
      |                         ^~~~~~~~~~~~
configdep.c:648: in main: exec_process exited with error code: 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/uartTest.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:9466: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
